Fix when there are justification opportunities inside text-combine-upright

This patch fixes justification spacing to not to apply inside a
text-combine-upright when it has justification opportunities.

The spec[1] defines that "For...spacing, the resulting composition is
treated as a single glyph".

[1] https://drafts.csswg.org/css-writing-modes-3/#text-combine-layout

BUG=607404
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2248803002
Cr-Commit-Position: refs/heads/master@{#412437}

Former-commit-id: 211db48591bc2bb3ff91d250c263606f1e3ae333